puppet: Updated to 3.7.3, depends on hiera

--- a/utils/puppet/HISTORY
+++ b/utils/puppet/HISTORY
@@ -1,3 +1,10 @@
+2014-12-04 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 3.7.3
+	  SOURCE_URL updated
+	* DEPENDS: Depends on hiera
+	* PRE_BUILD, ftools_gemtask.patch: Removed
+	* INSTALL: No more namespaceauth.conf to copy
+
 2010-06-17 Mark Bainter <mbainter@sourcemage.org>
 	* DEPENDS, DETAILS, CONFIGURE< PRE_BUILD, BUILD, INSTALL: spell created
 	* puppet.conf, puppetmaster.conf: basic configuration files
