libvirt: Updated to 1.2.9 Python is still optional, but ./configure no longer has flags

--- a/libs/libvirt/HISTORY
+++ b/libs/libvirt/HISTORY
@@ -1,3 +1,7 @@
+2014-12-04 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.2.9
+	* DEPENDS: Python is still optional, but ./configure no longer has flags
+
 2013-08-12 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.1.1
 	* DEPENDS: --*-libssh2 -> --*-ssh2
