qemu: Updated to 2.1.2 qemu.gpg: Add F108B584 (see https://lists.nongnu.org/archive/html/qemu-devel/2014-04/msg03559.html) Unused, removed docs-Fix-generating-qemu-doc.html-with-texinfo-5.patch

--- a/utils/qemu/HISTORY
+++ b/utils/qemu/HISTORY
@@ -1,3 +1,9 @@
+2014-12-04 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 2.1.2
+	* qemu.gpg: Add F108B584 (see
+	  https://lists.nongnu.org/archive/html/qemu-devel/2014-04/msg03559.html)
+	* docs-Fix-generating-qemu-doc.html-with-texinfo-5.patch: Unused, removed
+
 2014-04-14 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD: Pass down ARFLAGS=rv, to workaround buildsystem bug
 
