--- a/http/seamonkey/HISTORY
+++ b/http/seamonkey/HISTORY
@@ -1,3 +1,6 @@
+2014-12-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.31; SECURITY_PATCH++
+
 2014-10-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.30; SECURITY_PATCH++
 	* BUILD: use system libbz2
