--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-12-06 Ismael Luceno <ismael@sourcemage.org>
+	* devel/jwasm: new spell, Masm-compatible assembler
+
 2014-12-04 Eric Sandall <sandalle@sourcemage.org>
 	* ruby-raa/hiera: Added a key/value lookup tool for configuration data
 
