--- a/devel/diffuse/HISTORY
+++ b/devel/diffuse/HISTORY
@@ -1,3 +1,7 @@
+2014-12-07 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.4.8
+	* DEPENDS, BUILD: Works with Python 2 only
+
 2011-11-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.4.6
 
