--- a/audio-creation/nted/HISTORY
+++ b/audio-creation/nted/HISTORY
@@ -1,3 +1,6 @@
+2014-12-07 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: bump to 1.10.18
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on g++ to dependency on gcc with
 	  sub-depends on CXX (scripted)
