--- a/devel/cvsps/HISTORY
+++ b/devel/cvsps/HISTORY
@@ -1,3 +1,6 @@
+2014-12-07 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 3.13
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
