reposurgeon: new spell, A tool for editing version-control repository history

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-12-07 Ismael Luceno <ismael@sourcemage.org>
+	* devel/reposurgeon: new spell, A tool for editing version-control
+	  repository history
+
 2014-12-06 Ismael Luceno <ismael@sourcemage.org>
 	* devel/jwasm: new spell, Masm-compatible assembler
 
