--- a/graphics-libs/freetype2/HISTORY
+++ b/graphics-libs/freetype2/HISTORY
@@ -1,3 +1,7 @@
+2014-12-07 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 2.5.4, SECURITY_PATCH++,
+	  yet another security fix for CVE-2014-2240
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: added missing dependencies
 
