--- a/database/sqlite/HISTORY
+++ b/database/sqlite/HISTORY
@@ -1,3 +1,6 @@
+2014-12-08 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.8.7.3
+
 2014-11-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.8.7.2
 
