--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,8 @@
+2014-12-08 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: LATEST_maintenance_patches_3=3.18, LATEST_3=3.18
+	* info/kernels/3.18: added
+	* info/patches/maintenance_patches_3/patch-3.18: added
+
 2014-11-24 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: LATEST_maintenance_patches_3=patch-3.17.4
 	* info/patches/maintenance_patches_3/patch-3.17.4: added
