--- a/net/unbound/HISTORY
+++ b/net/unbound/HISTORY
@@ -1,3 +1,6 @@
+2014-12-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.5.1; SECURITY_PATCH++ (CVE-2014-8602)
+
 2014-11-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.5.0; don't do useless doc'ing
 	* DEPENDS: removed ldns, spell doesn't rely on it anymore; added
