--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-12-09 Ismael Luceno <ismael@sourcemage.org>
+	* devel/cvs-fast-export: new spell, Export an RCS or CVS history as
+	  a fast-import stream
+
 2014-12-07 Ismael Luceno <ismael@sourcemage.org>
 	* devel/reposurgeon: new spell, A tool for editing version-control
 	  repository history
