git-imerge: new spell, Incremental merge and rebase for git

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2014-12-09 Ismael Luceno <ismael@sourcemage.org>
 	* devel/cvs-fast-export: new spell, Export an RCS or CVS history as
 	  a fast-import stream
+	* devel/git-imerge: new spell, Incremental merge and rebase for
+	  git
 
 2014-12-07 Ismael Luceno <ismael@sourcemage.org>
 	* devel/reposurgeon: new spell, A tool for editing version-control
