--- a/database/sqlite/HISTORY
+++ b/database/sqlite/HISTORY
@@ -1,3 +1,6 @@
+2014-12-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.8.7.4
+
 2014-12-08 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.8.7.3
 
