--- a/haskell/haskell-http/HISTORY
+++ b/haskell/haskell-http/HISTORY
@@ -1,3 +1,6 @@
+2014-12-10 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 4000.2.18
+
 2014-05-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4000.2.14
 
