haskell-monadcatchio-transformers 0.3.1.2

--- a/haskell/haskell-monadcatchio-transformers/HISTORY
+++ b/haskell/haskell-monadcatchio-transformers/HISTORY
@@ -1,3 +1,6 @@
+2014-12-10 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.3.1.2
+
 2014-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS: version 0.3.1.0
 
