--- a/haskell/haskell-monad-control/HISTORY
+++ b/haskell/haskell-monad-control/HISTORY
@@ -1,3 +1,6 @@
+2014-12-10 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.3.3.0
+
 2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.3.2.3
 
