libs/glibc: version 2.20, SECURITY_PATCH++

--- a/libs/glibc/HISTORY
+++ b/libs/glibc/HISTORY
@@ -1,3 +1,12 @@
+2014-12-10 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 2.20, SECURITY_PATCH++ (CVE-2014-4043)
+	* BUILD: NPTL is no longer an addon, disable -Ofast too in CFLAGS
+	* PRE_BUILD: removed obsolete patches, added glibc-2.20-fhs-1.patch, cleanup formatting
+	* glibc-2.20-fhs-1.patch: added a LFS patch, fixes nscd's cache directory
+	* glibc-2.19-fix-sign-in-bsloww1-input.patch, glibc-2.19-xattr_header.patch,
+	  00_all_0008-nptl-handle-EAGAIN-with-some-futex-operations.patch,
+	  00_all_0011-arm-fix-PIC-vs-SHARED-typos.patch: removed
+
 2014-12-03 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated kernel headers to 3.17.4
 	  The prior 2.6.38 headers are getting too old (e.g. libcap requires newer,
