--- a/libs/glibc/HISTORY
+++ b/libs/glibc/HISTORY
@@ -6,6 +6,7 @@
 	* glibc-2.19-fix-sign-in-bsloww1-input.patch, glibc-2.19-xattr_header.patch,
 	  00_all_0008-nptl-handle-EAGAIN-with-some-futex-operations.patch,
 	  00_all_0011-arm-fix-PIC-vs-SHARED-typos.patch: removed
+	* init.d/nscd: fixed cache directory check/creation
 
 2014-12-03 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated kernel headers to 3.17.4
