--- a/ftp/wget/HISTORY
+++ b/ftp/wget/HISTORY
@@ -1,3 +1,6 @@
+2014-12-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.16.1
+
 2014-12-03 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Optionally depends on nettle for NTLM authentication
 
