--- a/devel/python/HISTORY
+++ b/devel/python/HISTORY
@@ -1,3 +1,9 @@
+2014-12-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.7.9; SECURITY_PATCH++ (CVE-2013-1753,
+	  CVE-2013-1752, CVE-2013-1752)
+	* BUILD: use message color
+	* INSTALL: added missing &&'s
+
 2014-10-31 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 2.7.8
 
