--- a/devel/python/INSTALL
+++ b/devel/python/INSTALL
@@ -6,9 +6,9 @@ fi &&
 
 # gettext
 install -vm 755 "$SOURCE_DIRECTORY"/Tools/i18n/{pygettext.py,msgfmt.py} \
-                "$INSTALL_ROOT/usr/bin"
+                "$INSTALL_ROOT/usr/bin" &&
 
-local PYVER=`echo ${VERSION}|cut -d . -f 1,2`
+local PYVER=`echo ${VERSION}|cut -d . -f 1,2` &&
 
 if [ -d "${INSTALL_ROOT}/usr/lib/python${PYVER}/plat-linux2" ];then
    cp -r "${INSTALL_ROOT}/usr/lib/python${PYVER}/plat-linux2" \
@@ -17,4 +17,3 @@ else
    cp -r "${INSTALL_ROOT}/usr/lib/python${PYVER}/plat-linux3" \
    "${INSTALL_ROOT}/usr/lib/python${PYVER}/plat-linux2"
 fi
-
