--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-12-11 Ladislav Hagara <hgr@vabo.cz>
+	* net/libpsl: new spell, C library to handle the Public Suffix List
+
 2014-12-09 Ismael Luceno <ismael@sourcemage.org>
 	* devel/cvs-fast-export: new spell, Export an RCS or CVS history as
 	  a fast-import stream
