--- a/ruby-raa/trans-simple/HISTORY
+++ b/ruby-raa/trans-simple/HISTORY
@@ -1,3 +1,6 @@
+2014-12-12 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fix description, remove changelog and versions
+
 2010-02-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: updated ruby dependency to RUBY provider
 
