--- a/ruby-raa/vpim/HISTORY
+++ b/ruby-raa/vpim/HISTORY
@@ -1,3 +1,6 @@
+2014-12-12 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fix description, remove changelog and versions
+
 2011-02-13 Andraž "ruskie" Levstik <ruskie+f03a580f@codemages.net>
 	* DETAILS: updateded to 0.695
 
