--- a/security/swatch/HISTORY
+++ b/security/swatch/HISTORY
@@ -1,3 +1,6 @@
+2014-12-12 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fix typo in description (activly -> actively)
+
 2007-04-23 Arjan Bouter <abouter@sourcemage.org>
 	* DEPENDS: cleaned up depends
 
