--- a/php-pear/pear-gtk_mdb_designer/HISTORY
+++ b/php-pear/pear-gtk_mdb_designer/HISTORY
@@ -1,5 +1,6 @@
 2014-12-12 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Fix typo in description (activily -> actively)
+	* DETAILS: Fix description formatting
 
 2008-09-08 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* HISTORY: fixed #12619
