--- a/science/ipc/HISTORY
+++ b/science/ipc/HISTORY
@@ -1,3 +1,6 @@
+2014-12-12 Ismael Luceno <ismael@sourcemage.org>
+	* : Fix typo in description (additionaly -> additionally)
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
