--- a/devel/extra-cmake-modules/HISTORY
+++ b/devel/extra-cmake-modules/HISTORY
@@ -1,3 +1,6 @@
+2014-12-11  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.5.0
+
 2014-11-06  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4.0
 
