openssh - nolonger depends tcp_wrappers

--- a/crypto/openssh/HISTORY
+++ b/crypto/openssh/HISTORY
@@ -1,3 +1,6 @@
+2014-12-12  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: remove obsolete tcp_wrappers 
+
 2014-10-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 6.7p1
 
