openldap - optional depends icu

--- a/collab/openldap/HISTORY
+++ b/collab/openldap/HISTORY
@@ -1,3 +1,6 @@
+2014-12-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: add optional icu
+
 2014-10-31 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.4.40; updated source mirror
 	* DEPENDS: use SSL provider
