nginx: fixed ulimits tuning on PAM-less systems

--- a/http/nginx/HISTORY
+++ b/http/nginx/HISTORY
@@ -1,5 +1,11 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
+2014-12-12 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* INSTALL: install nginx.conf
+	* init.d/nginx: source nginx file from sysconfig
+	* init.d/nginx.conf: added, to prepare nginx binary for various envs
+
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
 
 2014-04-18 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
