--- a/http/nginx/INSTALL
+++ b/http/nginx/INSTALL
@@ -2,6 +2,11 @@ make_single &&
 default_install &&
 make_normal &&
 
+if [[ $INIT_INSTALLED ]]; then
+  install_config_file "$SPELL_DIRECTORY/init.d/nginx.conf" \
+                      "$INSTALL_ROOT/etc/sysconfig/nginx"
+fi &&
+
 if [[ ! -d "$TEMP_DIR" ]]; then
   install -vm 775 -d -o nginx -g nginx "$TEMP_DIR"
 fi
