--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,6 @@
+2014-12-12 Pol Vinogradov <vin.public@gmail.com>
+	* DEPENDS: removed gawk again
+
 2014-12-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 1.16.2.901
 	  SECURITY_PATCH++, fixes MANY CVE
