--- a/archive/tar/HISTORY
+++ b/archive/tar/HISTORY
@@ -1,3 +1,6 @@
+2014-12-14 Pol Vinogradov <vin.public@gmail.com>
+	* DEPENDS: added acl and attr optionally
+
 2014-07-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.28
 	* PRE_BUILD, glibc215.patch: deleted
