--- a/devel/mawk/HISTORY
+++ b/devel/mawk/HISTORY
@@ -1,3 +1,6 @@
+2014-12-14 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.3.4-20141206
+
 2014-12-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 1.3.4-20141027
 	* PRE_BUILD, patches/nextfile-fix.patch: Nextfile statement
