--- a/devel/mawk/HISTORY
+++ b/devel/mawk/HISTORY
@@ -1,5 +1,6 @@
 2014-12-14 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 1.3.4-20141206
+	* patches/nextfile-fix.patch: Removed, applied by upstream
 
 2014-12-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 1.3.4-20141027
