--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,6 +1,9 @@
+2014-12-14 Pol Vinogradov <vin.public@gmail.com>
+	* DEPENDS: ffmpeg -> LIBAVCODEC
+
 2014-11-16 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.6.2
-	* DEPENDS: remove obsolete depencies
+	* DEPENDS: removed obsolete dependencies
 
 2014-10-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.6.0
