--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,5 +1,7 @@
 2014-12-14 Pol Vinogradov <vin.public@gmail.com>
-	* DEPENDS: ffmpeg -> LIBAVCODEC
+	* DETAILS: version 0.7.1
+	* BUILD: needs waf_build without --nocache
+	* DEPENDS: ffmpeg -> LIBAVCODEC, removed libquvi
 
 2014-11-16 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.6.2
