--- a/gnome2-libs/librsvg2/HISTORY
+++ b/gnome2-libs/librsvg2/HISTORY
@@ -1,3 +1,6 @@
+2014-12-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.40.6
+
 2014-10-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.40.5
 	* DEPENDS: gdk-pixbuf2 is required
