--- a/collab/openldap/HISTORY
+++ b/collab/openldap/HISTORY
@@ -1,3 +1,6 @@
+2014-12-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: fix typo
+
 2014-12-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add optional icu
 
