lmdb-0.9.14 - new spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 	* python-pypi/recaptcha-client: new spell, plugin for reCAPTCHA and
 	  reCAPTCHA Mailhide
 
+2014-12-15 Treeve Jelbert <treeve@sourcemage.org>
+	* database/lmdb: new spell, Lightning Memory-Mapped Database
+
 2014-12-11 Ladislav Hagara <hgr@vabo.cz>
 	* net/libpsl: new spell, C library to handle the Public Suffix List
 
