evas: Replace "bit" suffix with "-bit" in description

--- a/e-17/evas/HISTORY
+++ b/e-17/evas/HISTORY
@@ -1,3 +1,6 @@
+2014-12-16 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Replace "bit" suffix with "-bit" in description
+
 2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: giflib => GIFLIB
 
