--- a/graphics/luminance-hdr/HISTORY
+++ b/graphics/luminance-hdr/HISTORY
@@ -1,3 +1,6 @@
+2014-12-16 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Replace "bit" suffix with "-bit" in description
+
 2012-11-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: spell renamed to luminance-hdr, version 2.2.1
 	* DEPENDS: added dependencies on gsl and libraw
