rawstudio: Replace "bit" suffix with "-bit" in description

--- a/graphics/rawstudio/HISTORY
+++ b/graphics/rawstudio/HISTORY
@@ -1,3 +1,6 @@
+2014-12-16 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Replace "bit" suffix with "-bit" in description
+
 2011-10-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.0
 	* DEPENDS: added dependencies on flickcurl, libgphoto2
