--- a/ham/cwtext/HISTORY
+++ b/ham/cwtext/HISTORY
@@ -1,3 +1,6 @@
+2014-12-16 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Replace "bit" suffix with "-bit" in description
+
 2010-04-21 Tommy Boatman <tboatman@sourcemage.org>
 	* DETAILS: version 0.96
 
