--- a/kde4-apps/darkroom/HISTORY
+++ b/kde4-apps/darkroom/HISTORY
@@ -1,3 +1,6 @@
+2014-12-16 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Replace "bit" suffix with "-bit" in description
+
 2011-09-04 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: PATCHLEVEL++ for /opt/kde4 -> /usr change
 
