--- a/kernels/mcelog/HISTORY
+++ b/kernels/mcelog/HISTORY
@@ -1,3 +1,6 @@
+2014-12-16 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Replace "bit" suffix with "-bit" in description
+
 2010-03-25 Arjan Bouter <abouter@sourcemage.org>
 	* BUILD, DEPENDS, DETAILS, init.d/mcelog: spell created
 
