--- a/python-pypi/egenix-mx-base/HISTORY
+++ b/python-pypi/egenix-mx-base/HISTORY
@@ -1,3 +1,6 @@
+2014-12-16 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Replace "bit" suffix with "-bit" in description
+
 2013-03-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.2.5; quoting paths
 
