--- a/xorg-driver/xf86-video-impact/HISTORY
+++ b/xorg-driver/xf86-video-impact/HISTORY
@@ -1,3 +1,6 @@
+2014-12-16 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Replace "bit" suffix with "-bit" in description
+
 2008-03-17 Eric Sandall <sandalle@sourcemage.org>
 	* CONFLICTS: Auto-conflicts with xorg as well
 
