--- a/xorg-driver/xf86-video-newport/HISTORY
+++ b/xorg-driver/xf86-video-newport/HISTORY
@@ -1,3 +1,6 @@
+2014-12-16 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Replace "bit" suffix with "-bit" in description
+
 2009-09-11 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.2.3
 	  SOURCE matches upstream posted MD5
