--- a/net/dhcpcd/HISTORY
+++ b/net/dhcpcd/HISTORY
@@ -1,3 +1,6 @@
+2014-112-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.6.5
+
 2014-10-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 6.6.0
 
