--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-12-18 Vlad Glagolev <stealth@sourcemage.org>
+	* python-pypi/recaptcha-client: new spell, plugin for reCAPTCHA and
+	  reCAPTCHA Mailhide
+
 2014-12-11 Ladislav Hagara <hgr@vabo.cz>
 	* net/libpsl: new spell, C library to handle the Public Suffix List
 
