--- a/python-pypi/hatta/HISTORY
+++ b/python-pypi/hatta/HISTORY
@@ -1,3 +1,6 @@
+2014-12-18 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added recaptcha-client suggest dep
+
 2014-08-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added pygments suggest dep
 
