/libgit2-0.21.2 - new spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-12-18 Treeve Jelbert <treeve@sourcemage.org>
+	* libs/libgit2: new spell, C implemation of git functions
+
 2014-12-18 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/recaptcha-client: new spell, plugin for reCAPTCHA and
 	  reCAPTCHA Mailhide
