firefox: Add dependency on cairo's tee backend

--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2014-12-19 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Depends on cairo's tee backend
+
 2014-12-02 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 34.0.5
 	* DEPENDS, mozconfig: reorganized both files, added icu,
