--- a/libs/libgit2/HISTORY
+++ b/libs/libgit2/HISTORY
@@ -1,3 +1,6 @@
+2014-12-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.21.3
+
 2014-12-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.21.2
 	* DEPENDS: add optional libssh2
