--- a/disk/udisks2/HISTORY
+++ b/disk/udisks2/HISTORY
@@ -1,3 +1,6 @@
+2014-12-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.1.4
+
 2014-03-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.1.3
 	  SECURITY_PATCH++, fix CVE-2014-0004
