--- a/libs/upower/HISTORY
+++ b/libs/upower/HISTORY
@@ -1,3 +1,6 @@
+2014-12-19  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.99.2
+
 2014-08-22  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.99.1
 
