--- a/devel/cmake/HISTORY
+++ b/devel/cmake/HISTORY
@@ -1,3 +1,6 @@
+2014-12-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.1.0
+
 2014-09-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.0.2
 
