--- a/graphics-libs/libwebp/HISTORY
+++ b/graphics-libs/libwebp/HISTORY
@@ -1,3 +1,8 @@
+2014-12-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: VERSION 0.4.2
+	  new url
+	* DEPENDS: add GIFLIB
+
 2013-12-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.3.1
 
