--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,7 @@
+2014-12-19 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.4.36 (stable); SECURITY_PATCH++
+	  (CVE-2014-8142)
+
 2014-11-14 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.4.35 (stable); SECURITY_PATCH++
 	  (CVE-2014-3710)
