--- a/python-pypi/mercurial/HISTORY
+++ b/python-pypi/mercurial/HISTORY
@@ -1,3 +1,6 @@
+2014-12-19 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.2.3; SECURITY_PATCH=1 (CVE-2014-9390)
+
 2014-11-14 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.2.1
 
