--- a/graphics-libs/libraw/HISTORY
+++ b/graphics-libs/libraw/HISTORY
@@ -1,3 +1,6 @@
+2014-12-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: add JPEG. lcms2
+
 2014-01-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.16.0
 
