--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,3 +1,6 @@
+2014-12-16 Treeve Jelbert <treeve@sourcemage.org>
+	* BUILD, CONFIGURE:  ensure that R600 is supported
+
 2014-10-24 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 3.5.0, .gz -> .xz, removed COMPILERRT_VERSION and LLDB_VERSION
 	* PRE_BUILD: removed PIC related fix, applied *VERSION changes
