--- a/graphics-libs/mesalib/HISTORY
+++ b/graphics-libs/mesalib/HISTORY
@@ -1,3 +1,8 @@
+2014-12-16 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 10.4.0
+	* gl_select.patch: update, some files werre deleted
+	* DEPENDS: radeonsi needs libelf
+
 2014-10-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 10.3.2
 
