--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,7 @@
+2014-12-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 1.16.3
+	  CVE-2014-8092..8103
+
 2014-12-12 Pol Vinogradov <vin.public@gmail.com>
 	* DEPENDS: removed gawk again
 
