--- a/libs/libvdpau/HISTORY
+++ b/libs/libvdpau/HISTORY
@@ -1,3 +1,6 @@
+2014-12-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9
+
 2014-07-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8
 
