--- a/archive/xz-utils/HISTORY
+++ b/archive/xz-utils/HISTORY
@@ -1,3 +1,6 @@
+2014-12-22 Pol Vinogradov  <vin.public@gmail.com>
+	* DETAILS: version 5.2.0
+
 2013-07-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 5.0.5
 
