--- a/utils/dos2unix/HISTORY
+++ b/utils/dos2unix/HISTORY
@@ -1,3 +1,9 @@
+2014-12-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS version .1/4.1.2
+	  new website & url = sourceforge
+	* Makefile.patch: deleted
+	* PRE_BUILD: adjust
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
