--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-12-22 Treeve Jelbert <treeve@sourcemage.org>
+	* graphics-libs/libpgf: new spell, grpahics compression
+
 2014-12-18 Treeve Jelbert <treeve@sourcemage.org>
 	* libs/libgit2: new spell, C implemation of git functions
 
