args: new spell, argument parsing for humans

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-12-22 Vlad Glagolev <stealth@sourcemage.org>
+	* python-pypi/args: new spell, argument parsing for humans
+
 2014-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* graphics-libs/libpgf: new spell, grpahics compression
 
