--- a/python-pypi/clint/HISTORY
+++ b/python-pypi/clint/HISTORY
@@ -1,3 +1,7 @@
+2014-12-20 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.4.1
+	* DEPENDS: python3 supported
+
 2013-08-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: spell created
 
