--- a/python-pypi/feedgenerator/HISTORY
+++ b/python-pypi/feedgenerator/HISTORY
@@ -1,3 +1,6 @@
+2014-12-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.7
+
 2013-07-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS: spell created
 
