--- a/python-pypi/markupsafe/HISTORY
+++ b/python-pypi/markupsafe/HISTORY
@@ -1,3 +1,7 @@
+2014-12-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.23; updated website, description; quoting
+	  paths
+
 2014-03-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.19
 
