--- a/python-pypi/jinja2/HISTORY
+++ b/python-pypi/jinja2/HISTORY
@@ -1,3 +1,6 @@
+2014-12-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: markupsafe becomes required from 2.7
+
 2014-07-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.7.3
 
