--- a/python-pypi/pyyaml/HISTORY
+++ b/python-pypi/pyyaml/HISTORY
@@ -1,3 +1,7 @@
+2014-12-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.11
+	* DEPENDS: python3 supported; added libyaml opt dep
+
 2011-08-18 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.10; corrected descriptions
 
