--- a/python-pypi/python-dateutil/HISTORY
+++ b/python-pypi/python-dateutil/HISTORY
@@ -1,3 +1,9 @@
+2014-12-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.3; updated license, website, short desc,
+	  source url
+	* DEPENDS: added six required dep
+	* PREPARE: dropped multi-branching (not needed anymore)
+
 2013-04-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: imporve python3 depends
 
