--- a/python-pypi/python-markdown/HISTORY
+++ b/python-pypi/python-markdown/HISTORY
@@ -1,3 +1,6 @@
+2014-12-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.5.2
+
 2013-05-08 Treeve Jelbert <treeve@sourcemage.oge>
 	* DETAILS: version 2.3.1
 	  new website
