python-markdown2: new spell, fast and complete Python implementation of Markdown

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2014-12-22 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/args: new spell, argument parsing for humans
+	* python-pypi/python-markdown2: new spell, fast and complete Python
+	  implementation of Markdown
 
 2014-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* graphics-libs/libpgf: new spell, grpahics compression
