regex: new spell, alternative regular expression module, to replace re

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 	* python-pypi/args: new spell, argument parsing for humans
 	* python-pypi/python-markdown2: new spell, fast and complete Python
 	  implementation of Markdown
+	* python-pypi/regex: new spell, alternative regular expression module,
+	  to replace re
 
 2014-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* graphics-libs/libpgf: new spell, grpahics compression
