python-textile: new spell, Textile processing for Python

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	  implementation of Markdown
 	* python-pypi/regex: new spell, alternative regular expression module,
 	  to replace re
+	* python-pypi/python-textile: new spell, Textile processing for Python
 
 2014-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* graphics-libs/libpgf: new spell, grpahics compression
