--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 	* python-pypi/regex: new spell, alternative regular expression module,
 	  to replace re
 	* python-pypi/python-textile: new spell, Textile processing for Python
+	* python-pypi/pathtools: new spell, file system general utilities
 
 2014-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* graphics-libs/libpgf: new spell, grpahics compression
