watchdog: new spell, filesystem events monitoring

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 	  to replace re
 	* python-pypi/python-textile: new spell, Textile processing for Python
 	* python-pypi/pathtools: new spell, file system general utilities
+	* python-pypi/watchdog: new spell, filesystem events monitoring
 
 2014-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* graphics-libs/libpgf: new spell, grpahics compression
