--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
 	* python-pypi/python-textile: new spell, Textile processing for Python
 	* python-pypi/pathtools: new spell, file system general utilities
 	* python-pypi/watchdog: new spell, filesystem events monitoring
+	* python-pypi/py: new spell, library with cross-python path,
+	  ini-parsing, io, code, log facilities
 
 2014-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* graphics-libs/libpgf: new spell, grpahics compression
