pytest: new spell, simple powerful testing with Python

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@
 	* python-pypi/watchdog: new spell, filesystem events monitoring
 	* python-pypi/py: new spell, library with cross-python path,
 	  ini-parsing, io, code, log facilities
+	* python-pypi/pytest: new spell, simple powerful testing with Python
 
 2014-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* graphics-libs/libpgf: new spell, grpahics compression
