awesome-slugify: new spell, Python flexible slugify function

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@
 	* python-pypi/py: new spell, library with cross-python path,
 	  ini-parsing, io, code, log facilities
 	* python-pypi/pytest: new spell, simple powerful testing with Python
+	* python-pypi/awesome-slugify: new spell, Python flexible slugify
+	  function
 
 2014-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* graphics-libs/libpgf: new spell, grpahics compression
