clint: added missing args req dep

--- a/python-pypi/clint/HISTORY
+++ b/python-pypi/clint/HISTORY
@@ -1,3 +1,6 @@
+2014-12-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added missing args req dep
+
 2014-12-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.4.1
 	* DEPENDS: python3 supported
