--- a/xorg-lib/libxkbcommon/HISTORY
+++ b/xorg-lib/libxkbcommon/HISTORY
@@ -1,3 +1,6 @@
+2014-12-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.5.0
+
 2014-09-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.4.3
 
