lilv-0: Normalize SPELL field

--- a/audio-libs/lilv-0/HISTORY
+++ b/audio-libs/lilv-0/HISTORY
@@ -1,3 +1,6 @@
+2014-12-22 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Normalize SPELL field
+
 2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
 	* INSTALL: fail-safe cleanup of non-libraries
 
