--- a/audio-libs/sratom-0/HISTORY
+++ b/audio-libs/sratom-0/HISTORY
@@ -1,3 +1,6 @@
+2014-12-22 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Normalize SPELL field
+
 2013-10-23 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS, DEPENDS, BUILD, INSTALL: created
 
