trac-graphvizplugin: Normalize SPELL field

--- a/python-pypi/trac-graphvizplugin/HISTORY
+++ b/python-pypi/trac-graphvizplugin/HISTORY
@@ -1,3 +1,6 @@
+2014-12-22 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS, HISTORY: Normalize SPELL field
+
 2011-05-23 Sukneet Basuta <sukneet@sourcemage.org>
 	* DEPENDS: updated setuptools dependency to SETUPTOOLS provider
 
