gtk-systrace: Normalize SPELL field

--- a/security/gtk-systrace/HISTORY
+++ b/security/gtk-systrace/HISTORY
@@ -1,3 +1,6 @@
+2014-12-22 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS, HISTORY: Normalize SPELL field
+
 2006-10-26 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* BUILD: use TRACK_ROOT when linking #9163
 
