--- a/java/jakarta-commons-daemon/HISTORY
+++ b/java/jakarta-commons-daemon/HISTORY
@@ -1,3 +1,6 @@
+2014-12-22 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS, INSTALL: Normalize SPELL field and remove PKG_* variables
+
 2006-06-29 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Removed BUILD_API=1, MAINTAINER, and UPDATED
 	* BUILD: Converted to build_api 2
