jakarta-commons-dbcp: Normalize SPELL field and remove PKG_* variables

--- a/java/jakarta-commons-dbcp/HISTORY
+++ b/java/jakarta-commons-dbcp/HISTORY
@@ -1,3 +1,7 @@
+2014-12-22 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD, DETAILS, INSTALL: Normalize SPELL field and remove PKG_*
+	variables
+
 2010-10-30 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: added SOURCE_URL[1]
 
