--- a/java/jakarta-commons-dbcp/INSTALL
+++ b/java/jakarta-commons-dbcp/INSTALL
@@ -1,7 +1,7 @@
-extract_jakarta_src   ${PKG_SUBPRJ}-${PKG_NAME}                              \
-                 ${PKG_SUBPRJ}-${PKG_NAME}-${VERSION}                        \
-                 $SOURCE_DIRECTORY/${PKG_SUBPRJ}-${PKG_NAME}-${VERSION}-src  &&
+extract_jakarta_src   ${SPELL#*-}                              \
+                 ${SPELL#*-}-${VERSION}                        \
+                 $SOURCE_DIRECTORY/${SPELL#*-}-${VERSION}-src  &&
 
 register_jakarta_jar  \
-   ${PKG_SUBPRJ}-${PKG_NAME}-${VERSION}/dist/commons-dbcp.jar  \
+   ${SPELL#*-}-${VERSION}/dist/commons-dbcp.jar  \
    commons-dbcp.jar
