--- a/java/jakarta-commons-lang/HISTORY
+++ b/java/jakarta-commons-lang/HISTORY
@@ -1,3 +1,7 @@
+2014-12-22 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD, DETAILS, INSTALL: Normalize SPELL field and remove PKG_*
+	variables
+
 2006-06-29 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Removed BUILD_API=2, MAINTAINER, and UPDATED
 	* BUILD: Converted to build_api 2
