--- a/java/jakarta-commons-lang/INSTALL
+++ b/java/jakarta-commons-lang/INSTALL
@@ -1,7 +1,7 @@
-extract_jakarta_src  ${PKG_SUBPRJ}-${PKG_NAME}                    \
-                     ${PKG_SUBPRJ}-${PKG_NAME}-${VERSION}         \
-                     $SOURCE_DIRECTORY/${PKG_SUBPRJ}-${PKG_NAME}  &&
+extract_jakarta_src  ${SPELL#*-}                    \
+                     ${SPELL#*-}-${VERSION}         \
+                     $SOURCE_DIRECTORY/${SPELL#*-}  &&
 
 register_jakarta_jar                                                   \
-   ${PKG_SUBPRJ}-${PKG_NAME}-${VERSION}/dist/commons-lang-2.0-dev.jar  \
+   ${SPELL#*-}-${VERSION}/dist/commons-lang-2.0-dev.jar  \
    commons-lang.jar
