--- a/java/jakarta-commons-fileupload/INSTALL
+++ b/java/jakarta-commons-fileupload/INSTALL
@@ -1,7 +1,7 @@
-extract_jakarta_src  ${PKG_SUBPRJ}-${PKG_NAME}             \
-                     ${PKG_SUBPRJ}-${PKG_NAME}-${VERSION}  \
+extract_jakarta_src  ${SPELL#*-}             \
+                     ${SPELL#*-}-${VERSION}  \
                      $SOURCE_DIRECTORY                     &&
 
 register_jakarta_jar                                                         \
-   ${PKG_SUBPRJ}-${PKG_NAME}-${VERSION}/dist/commons-fileupload-1.0-dev.jar  \
+   ${SPELL#*-}-${VERSION}/dist/commons-fileupload-1.0-dev.jar  \
    commons-fileupload.jar
