jakarta-commons-logging: Normalize SPELL field and remove PKG_* variables

--- a/java/jakarta-commons-logging/INSTALL
+++ b/java/jakarta-commons-logging/INSTALL
@@ -1,10 +1,10 @@
-extract_jakarta_src  ${PKG_SUBPRJ}-${PKG_NAME}             \
-                     ${PKG_SUBPRJ}-${PKG_NAME}-${VERSION}  \
+extract_jakarta_src  ${SPELL#*-}             \
+                     ${SPELL#*-}-${VERSION}  \
                      $SOURCE_DIRECTORY/logging/dist        &&
 
 register_jakarta_jar                                            \
-  ${PKG_SUBPRJ}-${PKG_NAME}-${VERSION}/commons-logging-api.jar  \
+  ${SPELL#*-}-${VERSION}/commons-logging-api.jar  \
   commons-logging-api.jar                                       &&
 
-register_jakarta_jar  ${PKG_SUBPRJ}-${PKG_NAME}-${VERSION}/commons-logging.jar \
+register_jakarta_jar  ${SPELL#*-}-${VERSION}/commons-logging.jar \
                       commons-logging.jar
