jakarta-commons-modeler: Normalize SPELL field and remove PKG_* variables

--- a/java/jakarta-commons-modeler/INSTALL
+++ b/java/jakarta-commons-modeler/INSTALL
@@ -1,7 +1,7 @@
-extract_jakarta_src  ${PKG_SUBPRJ}-${PKG_NAME}                    \
-                     ${PKG_SUBPRJ}-${PKG_NAME}-${VERSION}         \
-                     $SOURCE_DIRECTORY/${PKG_SUBPRJ}-${PKG_NAME}  &&
+extract_jakarta_src  ${SPELL#*-}                    \
+                     ${SPELL#*-}-${VERSION}         \
+                     $SOURCE_DIRECTORY/${SPELL#*-}  &&
 
 register_jakarta_jar                                               \
-    ${PKG_SUBPRJ}-${PKG_NAME}-${VERSION}/dist/commons-modeler.jar  \
+    ${SPELL#*-}-${VERSION}/dist/commons-modeler.jar  \
     commons-modeler.jar
