--- a/java/jakarta-commons-modeler/HISTORY
+++ b/java/jakarta-commons-modeler/HISTORY
@@ -1,3 +1,7 @@
+2014-12-22 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD, DETAILS, INSTALL: Normalize SPELL field and remove PKG_*
+	variables
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
