--- a/java/jakarta-commons-pool/INSTALL
+++ b/java/jakarta-commons-pool/INSTALL
@@ -1,7 +1,7 @@
-extract_jakarta_src  ${PKG_SUBPRJ}-${PKG_NAME}             \
-                     ${PKG_SUBPRJ}-${PKG_NAME}-${VERSION}  \
+extract_jakarta_src  ${SPELL#*-}             \
+                     ${SPELL#*-}-${VERSION}  \
                      $SOURCE_DIRECTORY                     &&
 
 register_jakarta_jar                                            \
-    ${PKG_SUBPRJ}-${PKG_NAME}-${VERSION}/dist/commons-pool.jar  \
+    ${SPELL#*-}-${VERSION}/dist/commons-pool.jar  \
     commons-pool.jar
