jakarta-log4j: Normalize SPELL field and remove PKG_* variables

--- a/java/jakarta-log4j/HISTORY
+++ b/java/jakarta-log4j/HISTORY
@@ -1,3 +1,6 @@
+2014-12-22 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS, INSTALL: Normalize SPELL field and remove PKG_* variables
+
 2007-08-29 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Fixed missing parameters for depending on z-rejected
 
