--- a/java/jakarta-log4j/INSTALL
+++ b/java/jakarta-log4j/INSTALL
@@ -1,2 +1,2 @@
-extract_jakarta_src   ${PKG_NAME}  ${PKG_NAME}-${VERSION}  $SOURCE_DIRECTORY  &&
-register_jakarta_jar  ${PKG_NAME}-${VERSION}/lib/log4j-1.2.8.jar  log4j.jar
+extract_jakarta_src   ${SPELL##*-}  ${SPELL##*-}-${VERSION}  $SOURCE_DIRECTORY  &&
+register_jakarta_jar  ${SPELL##*-}-${VERSION}/lib/log4j-1.2.8.jar  log4j.jar
