--- a/java/jakarta-regexp/HISTORY
+++ b/java/jakarta-regexp/HISTORY
@@ -1,3 +1,6 @@
+2014-12-22 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS, INSTALL: Normalize SPELL field and remove PKG_* variables
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
