jakarta-struts-bin: Normalize SPELL field and remove PKG_* variables

--- a/java/jakarta-struts-bin/HISTORY
+++ b/java/jakarta-struts-bin/HISTORY
@@ -1,3 +1,6 @@
+2014-12-22 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS, INSTALL: Normalize SPELL field and remove PKG_* variables
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* PROVIDES: [automated] Fixed invalid entries.
 
