--- a/java/jakarta-struts-bin/INSTALL
+++ b/java/jakarta-struts-bin/INSTALL
@@ -1,4 +1,4 @@
 . $SECTION_DIRECTORY/java-functions  &&
 
-extract_jakarta_src  ${PKG_NAME}  ${PKG_NAME}-${VERSION}  $SOURCE_DIRECTORY  &&
-register_jakarta_jar  ${PKG_NAME}-${VERSION}/lib/struts.jar  struts.jar
+extract_jakarta_src  ${SPELL##*-}  ${SPELL##*-}-${VERSION}  $SOURCE_DIRECTORY  &&
+register_jakarta_jar  ${SPELL##*-}-${VERSION}/lib/struts.jar  struts.jar
