crimson-apache: Normalize SPELL field and remove PKG_* variables

--- a/java/crimson-apache/INSTALL
+++ b/java/crimson-apache/INSTALL
@@ -1,3 +1,3 @@
-extract_jakarta_dist  ${PKG_NAME} ${PKG_NAME}-${VERSION}              \
-                      build/${PKG_NAME}-${VERSION}-bin.tar.gz         &&
-register_jakarta_jar ${PKG_NAME}-${VERSION}/crimson.jar  crimson.jar
+extract_jakarta_dist  ${SPELL##*-} ${SPELL##*-}-${VERSION}              \
+                      build/${SPELL##*-}-${VERSION}-bin.tar.gz         &&
+register_jakarta_jar ${SPELL##*-}-${VERSION}/crimson.jar  crimson.jar
