--- a/python-pypi/simplejson/HISTORY
+++ b/python-pypi/simplejson/HISTORY
@@ -1,3 +1,7 @@
+2014-11-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.6.5; updated website; added AFL license
+	* DEPENDS: python3 supported
+
 2011-05-23 Sukneet Basuta <sukneet@sourcemage.org>
 	* DEPENDS: updated setuptools dependency to SETUPTOOLS provider
 
