--- a/graphics-libs/libpng/HISTORY
+++ b/graphics-libs/libpng/HISTORY
@@ -1,3 +1,6 @@
+2014-12-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6.16
+
 2014-11-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.15
 	  SECURITY_PATCH++
