--- a/graphics-libs/cimg/HISTORY
+++ b/graphics-libs/cimg/HISTORY
@@ -1,3 +1,6 @@
+2014-12-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.5.9
+
 2013-12-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.5.7
 
