--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-12-23 Pol Vinogradov <vin.public@gmail.com>
+	* video/kodi: new spell, a rebranded XBMC
+
 2014-12-22 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/args: new spell, argument parsing for humans
 	* python-pypi/python-markdown2: new spell, fast and complete Python
