--- a/video/xbmc/HISTORY
+++ b/video/xbmc/HISTORY
@@ -1,3 +1,6 @@
+2014-12-23 Pol Vinogradov <vin.public@gmail.com>
+	* CONFLICTS: added for kodi
+
 2014-09-14 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 13.2
 
