watchdog -> python-watchdog: renamed spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-12-24 Vlad Glagolev <stealth@sourcemage.org>
+	* python-pypi/watchdog -> python-pypi/python-watchdog: renamed spell
+
 2014-12-22 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/args: new spell, argument parsing for humans
 	* python-pypi/python-markdown2: new spell, fast and complete Python
