--- a/python-pypi/python-watchdog/HISTORY
+++ b/python-pypi/python-watchdog/HISTORY
@@ -1,2 +1,5 @@
+2014-12-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: renamed spell to avoid duplication
+
 2014-12-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, DEPENDS: created spell, version 0.8.2
