--- a/crypto/gsasl/HISTORY
+++ b/crypto/gsasl/HISTORY
@@ -1,3 +1,6 @@
+2014-12-24 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.8.0
+
 2011-08-20 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: added SOURCE2_IGNORE=signature
 
