ded: new spell, directory editor

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2014-12-24 Ismael Luceno <ismael@sourcemage.org>
 	* libs/td_lib: new spell, Thomas Dickey's library
+	* shell-term-fm/ded: new spell, directory editor
 
 2014-12-24 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/watchdog -> python-pypi/python-watchdog: renamed spell
