qemu: Depends on python 2.x

--- a/utils/qemu/HISTORY
+++ b/utils/qemu/HISTORY
@@ -1,3 +1,6 @@
+2014-12-24 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD, DEPENDS: Depends on python 2.x
+
 2014-12-04 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 2.1.2
 	* qemu.gpg: Add F108B584 (see
