--- a/utils/qemu/HISTORY
+++ b/utils/qemu/HISTORY
@@ -1,3 +1,6 @@
+2014-12-25 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.2.0
+
 2014-12-24 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD, DEPENDS: Depends on python 2.x
 
