haskell-mode: new spell, Emacs mode for Haskell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-12-25 Ismael Luceno <ismael@sourcemage.org>
+	* emacs-lisp/haskell-mode: new spell, Emacs mode for Haskell
+
 2014-12-24 Ismael Luceno <ismael@sourcemage.org>
 	* libs/td_lib: new spell, Thomas Dickey's library
 	* shell-term-fm/ded: new spell, directory editor
