--- a/libs/libgit2/HISTORY
+++ b/libs/libgit2/HISTORY
@@ -1,3 +1,6 @@
+2014-12-26 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE to make it a proper tarball name
+
 2014-12-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.21.3
 
@@ -10,4 +13,3 @@
 
 2013-01-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version master
-	
