--- a/graphics-libs/opencv/HISTORY
+++ b/graphics-libs/opencv/HISTORY
@@ -1,3 +1,6 @@
+2014-12-26 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fix SOURCE to make it a proper tarball name
+
 2014-07-22 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.4.9
 	* PRE_BUILD, pkgconfig.patch: patch from Arch added
