--- a/utils/puppet/HISTORY
+++ b/utils/puppet/HISTORY
@@ -1,3 +1,6 @@
+2014-12-26 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fix SOURCE to make it a proper tarball name
+
 2014-12-04 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 3.7.3
 	  SOURCE_URL updated
