--- a/net/bitcoin/HISTORY
+++ b/net/bitcoin/HISTORY
@@ -1,3 +1,10 @@
+2015-01-05 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.9.3, new SOURCE_URL
+	* BUILD, DEPENDS: Added optional dependency on miniupnpc
+	  Switched deps, wxWidgets => Qt4, db => db48
+	* PRE_BUILD: run ./autogen.sh
+	* INSTALL: Removed, not needed anymore
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
