--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-05 Ismael Luceno <ismael@sourcemage.org>
+	* database/db48: new spell, Berkeley DB 4.8
+
 2015-01-03 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/wok: new spell, static site generator
 
