--- a/database/db/HISTORY
+++ b/database/db/HISTORY
@@ -1,3 +1,6 @@
+2014-12-26 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: $TESTS -> $DB_TESTS
+
 2014-02-11 Tommy Boatman <tboatman@sourcemage.org>
 	* DEPENDS: switch uudeview to UUDECODE - sharutils and gmime both work
 
