--- a/database/db/HISTORY
+++ b/database/db/HISTORY
@@ -1,4 +1,5 @@
 2014-12-26 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 5.3.28
 	* BUILD: $TESTS -> $DB_TESTS
 
 2014-02-11 Tommy Boatman <tboatman@sourcemage.org>
