deprecate crypto/qca-gnupg [replaced by qca2]

--- a/crypto/qca-gnupg/HISTORY
+++ b/crypto/qca-gnupg/HISTORY
@@ -1,2 +1,4 @@
-2009-01-04 George Sherwood <gsherwood@sourcemage.org>
-	* DETAILS, BUILD, DEPENDS: Added this spell
+2014-12-29  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0
+	  PATCHLEVEL=9999
+	  spell deprecated [replaced by qca2]
