deprecate crypto/qca-openssl [replaced by qca2]

--- a/crypto/qca-openssl/HISTORY
+++ b/crypto/qca-openssl/HISTORY
@@ -1,33 +1,4 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
-
-2009-01-04 George Sherwood <george@beernabeer.com>
-	* DETAILS: Updated to version 2.0.0-beta3
-	* PRE_BUILD: Updated patch name
-	* qca-ossl-openssl.patch: Added gentoo patch to fix compile issue.
-
-2007-11-04 George Sherwood <george@beernabeer.com>
-	* DETAILS: Updated to version 2.0.0-beta1.
-	* BUILD: Added code to detect qt4.
-	* PRE_BUILD: Added to apply patch.
-	* qca-ossl_fix.patch: Added to fix compilation problem. 
-
-2007-05-13 George Sherwood <george@beernabeer.com>
-	* DETAILS: Updated to version 0.1-20070508
-
-2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
-	* DETAILS: [automated] Removed UPDATED.
-
-2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
-	* DETAILS: [automated] Removed BUILD_API=2.
-
-2006-04-09 George Sherwood <george@beernabeer.com>
-	* DETAILS: Updated to beta2
-	* BUILD: Removed debug option
-
-2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
-	* DETAILS: (automated) Add KEYWORDS
-
-2006-03-02 George Sherwood <george@beernabeer.com>
-	* ALL: Added this spell
-
+2014-12-29  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0
+	  PATCHLEVEL=9999
+	  spell deprecated [replaced by qca2]
