cbp2make: new spell, Makefile generation tool for Code::Blocks IDE

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2014-12-29 Ismael Luceno <ismael@sourcemage.org>
 	* python-pypi/ranger: new spell, File manager with an ncurses frontend
+	* devel/cbp2make: new spell, Makefile generation tool for Code::Blocks IDE
 
 2014-12-28 Treeve Jelbert <treeve@sourcemage.org>
 	* gnome2-libs/libaccounts-glib: new spell, single-signon
