nmap: Remove libdnet, add option for nc symlink, update CONFLICTS
Remove libdnet, the latest (from 2005) version is not compatible with this version of nmap.
      nmap.cc:166:45: fatal error: libdnet-stripped/include/config.h: No such file or directory
Add option for nc -> ncat symlink
Conflict with nc/netcat (even if `nc` symlink option is not selected)

--- a/security/nmap/HISTORY
+++ b/security/nmap/HISTORY
@@ -1,3 +1,10 @@
+2014-12-29 Eric Sandall <sandalle@sourcemage.org>
+	* BUILD, DEPENDS: Remove libdnet, the latest (from 2005) version is not
+	  compatible with this version of nmap.
+	  nmap.cc:166:45: fatal error: libdnet-stripped/include/config.h: No such file or directory
+	* CONFIGURE: Add option for nc -> ncat symlink
+	* INSTALL, CONFLICTS: Conflict with nc/netcat (even if `nc` symlink option is not selected)
+
 2014-10-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: use SSL provider
 
