--- a/net/nc/HISTORY
+++ b/net/nc/HISTORY
@@ -1,3 +1,6 @@
+2014-12-29 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Conflicts with nmap (even if `nc` symlink option is not selected)
+
 2013-01-07 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD: fixed multijob build
 	* CONFLICTS: conflicts cryptcat
