libvirt: requires nmap version of ncat and symlink as nc

--- a/security/nmap/HISTORY
+++ b/security/nmap/HISTORY
@@ -4,6 +4,7 @@
 	  nmap.cc:166:45: fatal error: libdnet-stripped/include/config.h: No such file or directory
 	* CONFIGURE: Add option for nc -> ncat symlink
 	* INSTALL, CONFLICTS: Conflict with nc/netcat (even if `nc` symlink option is not selected)
+	* *SUB_DEPENDS: Allow forcing ncat utility and nc symlink
 
 2014-10-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: use SSL provider
