axel: PATCHLEVEL++; Allow larger number of redirects, like wget

--- a/ftp/axel/HISTORY
+++ b/ftp/axel/HISTORY
@@ -1,6 +1,9 @@
+2014-12-30 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* PRE_BUILD: Allow larger number of redirects, like wget
+
 2011-09-26 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap
 
 2010-03-11 Sukneet Basuta <sukneet@sourcemage.org>
 	* DEPENDS, DETAILS: spell created
-
