gzip: Don't use own compression for a compression utility
$ sudo cast -c -V on gzip
...
gpg signature verified!
Unpacking source file gzip-1.6.tar.gz for spell gzip.
Building gzip
Building in dir: /usr/src/gzip-1.6
gzip    1.6

/var/lib/sorcery/codex/test/archive/gzip/BUILD: line 4: ./configure: No
such file or directory
 ! Problem Detected !

Switching to upstream .xz format fixes this on x86 and x86_64, at least,
with castfs enabled.

--- a/archive/gzip/HISTORY
+++ b/archive/gzip/HISTORY
@@ -1,3 +1,8 @@
+2014-12-30 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Don't use own compression for a compression utility
+	  Switch to .xz, otherwise seems to fail with castfs
+	* DEPENDS: Depends on LZMA
+
 2013-06-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.6
 
