cproto: new spell, Generate function prototypes from C source code

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-12-31 Ismael Luceno <ismael@sourcemage.org>
+	* devel/cproto: new spell, Generate function prototypes from C
+	  source code
+
 2014-12-29 Eric Sandall <sandalle@sourcemage.org>
 	* net/ebtables,nftables,libnftnl: Added some Netfilter table user-space
 	  programs and libraries.
