dialog: Updated to 1.2-20140911
See http://invisible-island.net/dialog/CHANGES

--- a/utils/dialog/HISTORY
+++ b/utils/dialog/HISTORY
@@ -1,3 +1,7 @@
+2014-12-31 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.2-20140911
+	  See http://invisible-island.net/dialog/CHANGES
+
 2014-08-11 Pol Vinogradov <vin.public@gmail.com>
 	* BUILD, CONFIGURE, *SUB_DEPENDS, INSTALL: added option to build
 	  shared library
