ghostscript: lcms2 is no longer optional, but required
checking for local lcms2 library source... no
checking for system lcms2 library... checking for
cmsGetTransformOutputFormat in -llcms2... no
configure: WARNING: lcms2 not found, or too old
checking for local lcms library source... configure: error: LittleCMS
source not found!

--- a/printer/ghostscript/HISTORY
+++ b/printer/ghostscript/HISTORY
@@ -1,3 +1,6 @@
+2014-12-31 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: lcms2 is no longer optional, but required
+
 2014-10-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 9.15
 
