texlive: Fixes Bug #630. Fix finding the path for freetype2 headers

--- a/latex/texlive/HISTORY
+++ b/latex/texlive/HISTORY
@@ -1,3 +1,7 @@
+2013-12-15 Javier Vasquez <j.e.vasquez.v@gmail.com>
+	* Fixes Bug #630
+	* DEPENDS, BUILD: Fixing finding the path for freetype2 headers
+
 2013-08-10 Javier Vasquez <j.e.vasquez.v@gmail.com>
 	* Fixes Bug #471
 	* BUILD: Remove --disable-luatex
