openssl:  Parallel jobs on install work, re-enable with make_normal

--- a/crypto/openssl/HISTORY
+++ b/crypto/openssl/HISTORY
@@ -1,5 +1,6 @@
 2014-12-31 Eric Sandall <sandalle@sourcemage.org>
 	* BUILD: Work-around for Bug #556 no longer needed
+	* INSTALL: Parallel jobs on install work, re-enable with make_normal
 
 2014-10-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: versions 1.0.1j and 0.9.8zc, SECURITY_PATCH++, fixes
