--- a/crypto/openssl/INSTALL
+++ b/crypto/openssl/INSTALL
@@ -1,3 +1,2 @@
-make_single &&
-make MANDIR="$INSTALL_ROOT/usr/share/man" install &&
-make_normal
+make_normal  &&
+make MANDIR="$INSTALL_ROOT/usr/share/man" install
