--- a/utils/util-linux/HISTORY
+++ b/utils/util-linux/HISTORY
@@ -1,3 +1,6 @@
+2015-01-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version to 2.25.2
+
 2014-05-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version to 2.24.2
 
