samba.gpg Add 2014 and 2015 upstream GPG keys
https://download.samba.org/pub/samba/samba-pubkey.asc
Signed with and refreshed keys of https://lists.samba.org/archive/samba/2007-February/129127.html

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-01-02 Eric Sandall <sandalle@sourcemage.org>
+	* samba.gpg: Add 2014 and 2015 upstream GPG keys
+	  https://download.samba.org/pub/samba/samba-pubkey.asc
+	  Signed with and refreshed keys of
+	  https://lists.samba.org/archive/samba/2007-February/129127.html
+
 2014-12-31 Ismael Luceno <ismael@sourcemage.org>
 	* devel/cproto: new spell, Generate function prototypes from C
 	  source code
