talloc: Updated to 2.1.1
samba.org is now all https://
Not using GPG, see http://www.sourcemage.org/issues/331
HTTP_DL_HANDLER (default wget) needs SSL support curl and aria2 (other handlers) need SSL sub-depends added.
C30A4429.gpg removed

--- a/libs/talloc/HISTORY
+++ b/libs/talloc/HISTORY
@@ -1,3 +1,11 @@
+2015-01-02 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 2.1.1
+	  samba.org is now all https://
+	  Not using GPG, see http://www.sourcemage.org/issues/331
+	* DEPENDS:  HTTP_DL_HANDLER (default wget) needs SSL support
+	  curl and aria2 (other handlers) need SSL sub-depends added.
+	* C30A4429.gpg: Removed
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
