vimrc-mode: new spell, Emacs major mode for vimrc files

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-01-02 Ismael Luceno <ismael@sourcemage.org>
+	* emacs-lisp/vimrc-mode: new spell, Emacs major mode for vimrc
+	  files
+
 2015-01-02 Eric Sandall <sandalle@sourcemage.org>
 	* samba.gpg: Add 2014 and 2015 upstream GPG keys
 	  https://download.samba.org/pub/samba/samba-pubkey.asc
