sgi.gpg: Added F475FA1D key
from ftp://oss.sgi.com/projects/xfs/cmd_tars/xfsprogs-3.2.2.tar.gz.sig
and ftp://oss.sgi.com/projects/xfs/cmd_tars/xfsdump-3.1.4.tar.gz.sig

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 	  https://download.samba.org/pub/samba/samba-pubkey.asc
 	  Signed with and refreshed keys of
 	  https://lists.samba.org/archive/samba/2007-February/129127.html
+	* disk/sgi.gpg: Added F475FA1D key
+	  from ftp://oss.sgi.com/projects/xfs/cmd_tars/xfsprogs-3.2.2.tar.gz.sig
+	  and ftp://oss.sgi.com/projects/xfs/cmd_tars/xfsdump-3.1.4.tar.gz.sig
 
 2014-12-31 Ismael Luceno <ismael@sourcemage.org>
 	* devel/cproto: new spell, Generate function prototypes from C
