tdb: Updated to 1.3.4
samba.org is now all https://
Not using GPG, see http://www.sourcemage.org/issues/331
HTTP_DL_HANDLER (default wget) needs SSL support curl and aria2 (other handlers) need SSL sub-depends added.

--- a/database/tdb/HISTORY
+++ b/database/tdb/HISTORY
@@ -1,3 +1,10 @@
+2015-01-02 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.3.4
+	  samba.org is now all https://
+	  Not using GPG, see http://www.sourcemage.org/issues/331
+	* DEPENDS:  HTTP_DL_HANDLER (default wget) needs SSL support
+	  curl and aria2 (other handlers) need SSL sub-depends added.
+
 2014-04-08 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.2.13
 	* DEPENDS: added gettext optional dependency
