--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,3 +1,6 @@
+2015-01-02 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 4.8.4
+
 2014-09-28 Jeremy Blosser <jblosser@sourcemage.org>
 	* DETAILS: version 4.8.3
 
