x11-ssh-askpass: Depends on imake, libice, libsm, libxt, and libx11
Runtime depends on a provider of SSH

--- a/crypto/x11-ssh-askpass/HISTORY
+++ b/crypto/x11-ssh-askpass/HISTORY
@@ -1,3 +1,7 @@
+2015-01-02 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Depends on imake, libice, libsm, libxt, and libx11
+	  Runtime depends on a provider of SSH
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
