swig: Updated to 3.0.3

--- a/devel/swig/HISTORY
+++ b/devel/swig/HISTORY
@@ -1,3 +1,6 @@
+2015-01-02 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 3.0.3
+
 2014-09-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.0.2
 	* DEPENDS, *SUB_DEPENDS*: simplify some flags
