network-manager:  Updated to 0.9.6.4 --with-ck -> --with-session-tracking=ck Don't error on warnings, such fail

--- a/net/network-manager/HISTORY
+++ b/net/network-manager/HISTORY
@@ -1,3 +1,8 @@
+2015-01-02 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 0.9.6.4
+	* DEPENDS: --with-ck -> --with-session-tracking=ck
+	* PRE_BUILD: Don't error on warnings, such fail
+
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: udev => UDEV
 
