ruby-1.9 - conflicts ruby-2.2

--- a/ruby-raa/ruby-1.9/HISTORY
+++ b/ruby-raa/ruby-1.9/HISTORY
@@ -1,3 +1,5 @@
+2015-01-03 Treeve Jelbert <treeve@sourcemage.org>
+	* CONFLICTS: add ruby-2.2
 2014-11-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.9.3-p551; SECURITY_PATCH++ (CVE-2014-8080,
 	  CVE-2014-8090)
