--- a/python-pypi/hatta/HISTORY
+++ b/python-pypi/hatta/HISTORY
@@ -1,3 +1,13 @@
+2014-12-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* parser.patch: added, backported official patch
+
+2014-12-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.6.5; use SPELLX
+	* template.patch: added, to use custom templates
+	* locale.patch: updated for new version
+	* wanted.patch: dropped, fixed by upstream
+
 2014-12-18 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added recaptcha-client suggest dep
 
