--- a/net/tinc/HISTORY
+++ b/net/tinc/HISTORY
@@ -1,5 +1,8 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
+2015-01-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.0.25
+
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
 
 2014-05-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.0.24
