--- a/net/freeradius/HISTORY
+++ b/net/freeradius/HISTORY
@@ -1,5 +1,8 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
+2015-01-04 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.2.6
+
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
 
 2014-07-17 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.2.5
