talloc: Fix bundled waf, force it to run with python2

--- a/libs/talloc/HISTORY
+++ b/libs/talloc/HISTORY
@@ -1,3 +1,6 @@
+2015-01-04 Ismael Luceno <ismael@sourcemage.org>
+	* PRE_BUILD: Fixed bundled waf, force it to run with python2
+
 2015-01-02 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 2.1.1
 	  samba.org is now all https://
