libgphoto2: Fix SOURCE_URL[0]

--- a/graphics/libgphoto2/HISTORY
+++ b/graphics/libgphoto2/HISTORY
@@ -1,3 +1,6 @@
+2015-01-04 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fix SOURCE_URL[0]
+
 2014-12-29 Treeve Jelbert <treeve@sourcemage.org> 
 	* DETAILS: version 2.5.6
 
