wget: Make pcre optional

--- a/ftp/wget/HISTORY
+++ b/ftp/wget/HISTORY
@@ -1,3 +1,6 @@
+2015-01-05 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Made pcre optional
+
 2014-12-11 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.16.1
 
