wxgtk: Improve pcre dependency description

--- a/x11-toolkits/wxgtk/HISTORY
+++ b/x11-toolkits/wxgtk/HISTORY
@@ -1,3 +1,6 @@
+2015-01-05 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Improve pcre dependency description
+
 2014-04-24 Thomas Orgis <sobukus@sourcemage.org>
 	* DEPENDS: ... and when MESALIB is mesalib-1x, depends on glu
 
