wxgtk-new: Improve pcre dependency description

--- a/x11-toolkits/wxgtk-new/HISTORY
+++ b/x11-toolkits/wxgtk-new/HISTORY
@@ -1,3 +1,6 @@
+2015-01-05 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Improve pcre dependency description
+
 2014-09-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD, 0001-remove-fvisibility-inlines-hidden-from-CXXFLAGS.patch:
 	  fix linker error triggered in spells using wxgtk-new
