--- a/net/dnsmasq/HISTORY
+++ b/net/dnsmasq/HISTORY
@@ -1,3 +1,10 @@
+2015-01-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.72
+	* PRE_BUILD: strip various config flags
+	* DEPENDS: extra depends, more flags
+	* CONFIGURE: remove IDN opption, now in DEPENDS
+	* BUILD: simplify
+
 2014-05-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.71
 
