--- a/net/dnsmasq/INSTALL
+++ b/net/dnsmasq/INSTALL
@@ -1,4 +1,4 @@
-if is_depends_enabled $SPELL gettext; then
+if ! is_depends_enabled $SPELL gettext; then
     make AWK=gawk PREFIX=/usr install
 else
     make AWK=gawk PREFIX=/usr install-i18n
