subversion: add archive URLs

--- a/collab/subversion/HISTORY
+++ b/collab/subversion/HISTORY
@@ -1,3 +1,6 @@
+2015-01-05 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: add archive URLs, as stuff gets removed from main site
+
 2014-09-04 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: Fix dependency on serf (without the flag, it may be skipped)
 
