--- a/net/network-manager/HISTORY
+++ b/net/network-manager/HISTORY
@@ -1,3 +1,9 @@
+2015-01-05 Treeve Jelbert <treeve@sourcemage.org> 
+	* DETAILS: version 1.0.0
+	* DEPENDS add upower, dnsmasq, util-linux, libsoup, newt, libndp, readline, 
+	  ifupdown, BLUEZ, upower
+	  remove gconf, wpa_supplicant, wireless_tools
+
 2015-01-02 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.9.6.4
 	* DEPENDS: --with-ck -> --with-session-tracking=ck
