db48: Install symlinks to /usr/lib

--- a/database/db48/HISTORY
+++ b/database/db48/HISTORY
@@ -7,3 +7,4 @@
 	  Removed db-1.85 compatibility build flag
 	  Disabled Java and Tcl support, and tests
 	  Disabled documents and utilities installation
+	* INSTALL: Install symlinks to /usr/lib
