network-manager - fix typos, depends wpa_supplicant

--- a/net/network-manager/HISTORY
+++ b/net/network-manager/HISTORY
@@ -1,3 +1,6 @@
+2015-01-06 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: fix typos, add wpa_supplicant
+
 2015-01-05 Treeve Jelbert <treeve@sourcemage.org> 
 	* DETAILS: version 1.0.0
 	* DEPENDS add upower, dnsmasq, util-linux, libsoup, newt, libndp, readline, 
