--- a/disk/lvm/HISTORY
+++ b/disk/lvm/HISTORY
@@ -1,3 +1,6 @@
+2015-01-06 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.02.114
+
 2014-10-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.02.111
 
